[package]
name = "csbq"
version = "0.1.1"
edition = "2021"
description = "csbq"
license = "MIT"
repository ="https://github.com/keithyin/csbq/tree/main"

[dependencies]
clap = {version="4.4", features=["derive"]}
gskits="0.9"
mm2 = "0.13"
asts = "0.6"
crossbeam = "0.8"
time = "0.3.34"

num_cpus="1.16"
rust-htslib = "0.47.0"
tracing = "0.1.40"
tracing-subscriber = {version="0.3.18", features=["json", "env-filter", "fmt", "time", "local-time"]}
# num = "0.4"